fix header spacing on mobile

--- a/theme/style/main.css
+++ b/theme/style/main.css
@@ -83,6 +83,7 @@ article h1 {
     color:#F56017;
     font-weight:normal;
     font-size:20pt;
+    line-height:1em;
 }
 article h2 {
     font-weight:normal;
